# edabit-python-challenges

./: pyproject.toml
01_very_easy/classes/: 05_ones_threes_nines_v1.py  06_fetch_sports_player_info.py
01_very_easy/general/: 01_two_numbers_sum.py  02_next_integer.py  03_minutes_to_seconds.py  04_triangle_area.py  05_cube_buggy_code.py  06_hours_to_seconds.py  07_triangle_maximum_edge.py  08_remainder_from_two_num.py  pyproject.toml
